coalesced_derive/tests/snapshots/coalesced_derive__construction__tests__custom_annotation.snap
---
source: coalesced_derive/src/construction.rs
assertion_line: 65
expression: formatted
---
pub trait Coalesce: Sized + Semigroup {
    fn coalesce(self, other: Self) -> Self {
        ::coalesced::Semigroup::semigroup_op(self, other)
    }
}
impl<T: IntoIterator + FromIterator<T::Item>> Coalesce for Concatenated<T> {}
impl<T: IntoIterator + FromIterator<T::Item>> Coalesce
for ::coalesced::Reversed<Concatenated<T>> {}
impl<
    T: IntoIterator + FromIterator<T::Item>,
    X: IntoIterator + FromIterator<X::Item>,
> Coalesce for ::coalesced::Annotated<Concatenated<T>, X> {}
impl<
    T: IntoIterator + FromIterator<T::Item>,
    X: IntoIterator + FromIterator<X::Item>,
> Coalesce for ::coalesced::Reversed<::coalesced::Annotated<Concatenated<T>, X>> {}
impl<T: IntoIterator + FromIterator<T::Item>> ::coalesced::Semigroup
for Concatenated<T> {
    fn semigroup_op(base: Self, other: Self) -> Self {
        Self::default_semigroup_op(base, other, vec![(); 0], vec![(); 0])
    }
}
impl<T: IntoIterator + FromIterator<T::Item>> From<T> for Concatenated<T> {
    fn from(value: T) -> Self {
        Concatenated(value)
    }
}
impl<T: IntoIterator + FromIterator<T::Item>> std::ops::Deref for Concatenated<T> {
    type Target = T;
    fn deref(&self) -> &Self::Target {
        &self.0
    }
}
impl<T: IntoIterator + FromIterator<T::Item>> std::ops::DerefMut for Concatenated<T> {
    fn deref_mut(&mut self) -> &mut Self::Target {
        &mut self.0
    }
}
impl<T: IntoIterator + FromIterator<T::Item>> ::coalesced::op::Construction<T>
for Concatenated<T> {
    fn new(value: T) -> Self {
        Self(value)
    }
    fn into_inner(self) -> T {
        self.0
    }
}
impl<
    T: IntoIterator + FromIterator<T::Item>,
    X: IntoIterator + FromIterator<X::Item>,
> ::coalesced::op::ConstructionAnnotated<T, X> for Concatenated<T> {}
